--- a/hyperkitty/templates/hyperkitty/ajax/temp_message.html
+++ b/hyperkitty/templates/hyperkitty/ajax/temp_message.html
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <div class="email-body"
+        <div class="email-body {% if email.display_fixed %}fixed{% endif %}"
          >{{ email.content|snip_quoted|wordwrap:90|urlizetrunc:76|escapeemail }}</div>
 
         <div class="email-info">
