Fix broken link to address activation in Postorius

--- a/hyperkitty/templates/hyperkitty/user_profile.html
+++ b/hyperkitty/templates/hyperkitty/user_profile.html
@@ -66,7 +66,7 @@
                                         {% if postorius_installed %}
                                             <li>
                                                 <i class="fa fa-link" aria-hidden="true"></i>
-                                                <a href="{{ postorius_installed }}/users/address_activation/">
+                                                <a href="{{ postorius_installed }}/../users/address_activation/">
                                                     {% trans "Link another address" %}
                                                 </a>
                                             </li>
