--- a/hyperkitty/templates/hyperkitty/messages/summary_message.html
+++ b/hyperkitty/templates/hyperkitty/messages/summary_message.html
@@ -28,7 +28,7 @@
                 <div class="thread-content">
                     <div class="thread-email row">
                         <span class="expander collapsed col-tn-12">
-                            {{ email.content|urlizetrunc:76|escapeemail }}
+                            {{ email.content|urlizetrunc:76|escapeemaillinks }}
                         </span>
                     </div>
                     <div class="thread-extras row">
