--- a/hyperkitty/templates/hyperkitty/reattach.html
+++ b/hyperkitty/templates/hyperkitty/reattach.html
@@ -6,7 +6,7 @@
 
 
 {% block title %}
-{% trans "Reattach a thread" %} - {{ mlist.display_name|default:mlist.name|escapeemail }} - {{ app_name|title }}
+{% trans "Reattach a thread" %} - {{ mlist.display_name|default:mlist.name }} - {{ app_name|title }}
 {% endblock %}
 
 {% block content %}
