--- a/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
+++ b/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
@@ -32,7 +32,7 @@
                 <div class="thread-content">
                     <div class="thread-email row">
                         <span class="expander collapsed col-tn-12">
-                            {{ starting_email.content|urlizetrunc:76|escapeemail }}
+                            {{ starting_email.content|urlizetrunc:76|escapeemaillinks }}
                         </span>
                     </div>
                     <div class="thread-extras row">
