--- a/hyperkitty/templates/hyperkitty/search_results.html
+++ b/hyperkitty/templates/hyperkitty/search_results.html
@@ -5,7 +5,7 @@
 
 
 {% block title %}
-{% trans "Search results for" %} "{{ query }}"{% if mlist %} - {{ mlist.display_name|default:mlist.name|escapeemail }} {% endif %} - {{ app_name|title }}
+{% trans "Search results for" %} "{{ query }}"{% if mlist %} - {{ mlist.display_name|default:mlist.name }} {% endif %} - {{ app_name|title }}
 {% endblock %}
 
 {% block content %}
@@ -35,7 +35,7 @@
 
             {% if mlist.display_name %}
             <span class="list-address hidden-tn hidden-xs hidden-sm col-md-4">
-                {{ mlist.name|escapeemail }}
+                {{ mlist.name }}
             </span>
             {% endif %}
             <ul class="list-unstyled list-stats col-tn-12 col-sm-6 col-md-4">
