--- a/hyperkitty/templates/hyperkitty/user_posts.html
+++ b/hyperkitty/templates/hyperkitty/user_posts.html
@@ -5,7 +5,7 @@
 
 
 {% block title %}
-{% trans "Messages by" %} {{ fullname }}{% if mlist %} - {{ mlist.display_name|default:mlist.name|escapeemail }} {% endif %} - {{ app_name|title }}
+{% trans "Messages by" %} {{ fullname }}{% if mlist %} - {{ mlist.display_name|default:mlist.name }} {% endif %} - {{ app_name|title }}
 {% endblock %}
 
 {% block content %}
@@ -19,7 +19,7 @@
         <div class="thread-list-header page-header">
             {% if mlist %}
             <h1>{% trans "Messages by" %} {{ fullname }}
-                <small>{% trans "in" %} {{ mlist.display_name|default:mlist.name|escapeemail }}</small>
+                <small>{% trans "in" %} {{ mlist.display_name|default:mlist.name }}</small>
             </h1>
             {% else %}
             <h1>{% trans "Messages by" %} {{ fullname }}</h1>
@@ -27,7 +27,7 @@
             <ul class="thread-list-info">
                 {% if mlist.display_name %}
                 <li class="list-address">
-                    {{ mlist.name|escapeemail }}
+                    {{ mlist.name }}
                 </li>
                 {% endif %}
                 <li class="discussion">
