--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -5,6 +5,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="ROBOTS" content="INDEX, FOLLOW" />
         <title>{% block title %}{{ app_name|title }}{% endblock %}</title>
         <meta name="author" content="" />
