Paginate the front page

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -296,3 +296,13 @@ div#months-list {
         fill: steelBlue;
     }
 }
+
+
+//=== Paginator ===/
+.paginator {
+    text-align: center;
+    form {
+        display: inline-block;
+        margin: 0 auto;
+    }
+}
