--- a/hyperkitty/templates/hyperkitty/index.html
+++ b/hyperkitty/templates/hyperkitty/index.html
@@ -250,6 +250,8 @@
 
 </div> <!-- /row, for lists -->
 
+{% include "hyperkitty/paginator.html" with pager=all_lists notbydate=True %}
+
 <div class="row">
     <img class="logo col-tn-offset-2 col-xs-offset-3 col-sm-offset-4 col-md-offset-4 col-lg-offset-5" alt="HyperKitty" src="{% static 'hyperkitty/img/logo.png' %}" />
 </div>
