Fix logo display on the front page

--- a/hyperkitty/templates/hyperkitty/index.html
+++ b/hyperkitty/templates/hyperkitty/index.html
@@ -252,9 +252,7 @@
 
 {% include "hyperkitty/paginator.html" with pager=all_lists notbydate=True %}
 
-<div class="row">
-    <img class="logo col-tn-offset-2 col-xs-offset-3 col-sm-offset-4 col-md-offset-4 col-lg-offset-5" alt="HyperKitty" src="{% static 'hyperkitty/img/logo.png' %}" />
-</div>
+<img class="logo" alt="HyperKitty" src="{% static 'hyperkitty/img/logo.png' %}" />
 
 </div> <!-- /all-lists, outer-wrapper -->
 
