--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-index.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-index.scss
@@ -234,3 +234,11 @@ $headerNavPadding: 7px;
         }
     }
 }
+
+
+//=== Logo
+
+.all-lists .logo {
+    display: block;
+    margin: 50px auto 0 auto;
+}
