Refactor the paginator

--- a/hyperkitty/templates/hyperkitty/index.html
+++ b/hyperkitty/templates/hyperkitty/index.html
@@ -250,7 +250,7 @@
 
 </div> <!-- /row, for lists -->
 
-{% include "hyperkitty/paginator.html" with pager=all_lists notbydate=True %}
+{% include "hyperkitty/paginator.html" with pager=all_lists notbydate=True page_jump=True %}
 
 <img class="logo" alt="HyperKitty" src="{% static 'hyperkitty/img/logo.png' %}" />
 
