--- a/hyperkitty/templates/hyperkitty/paginator.html
+++ b/hyperkitty/templates/hyperkitty/paginator.html
@@ -35,3 +35,22 @@
     </li>
 </ul>
 </div>
+{% if page_jump %}
+<div class="paginator">
+<form action="{{ request.path }}" method="get" class="form-inline">
+    <input type="hidden" name="page" value="{{ pager.number }}" />
+    {% trans 'Results per page:' %}</span>
+    <select name="count" class="form-control input-sm">
+        {% for count in paginator_per_page_options %}
+            <option value="{{ count }}"
+                {% if pager.paginator.per_page == count %}
+                selected="selected"
+                {% endif %}
+                >{{ count }}
+            </option>
+        {% endfor %}
+    </select>
+    <input type="submit" class="btn btn-sm" value="Go" />
+</form>
+</div>
+{% endif %}
