--- a/hyperkitty/templates/hyperkitty/thread_list.html
+++ b/hyperkitty/templates/hyperkitty/thread_list.html
@@ -59,24 +59,7 @@
             <p>{% trans "Sorry no email threads could be found" %} {{ no_results_text }}.</p>
         {% endfor %}
 
-        {% include "hyperkitty/paginator.html" with pager=threads %}
-        <div class="paginator">
-        <form action="{{ request.path }}" method="get" class="form-inline">
-            <input type="hidden" name="page" value="{{ threads.number }}" />
-            {% trans 'Results per page:' %}</span>
-            <select name="count" class="form-control input-sm">
-                {% for count in per_page_options %}
-                    <option value="{{ count }}"
-                        {% if threads.paginator.per_page == count %}
-                        selected="selected"
-                        {% endif %}
-                        >{{ count }}
-                    </option>
-                {% endfor %}
-            </select>
-            <input type="submit" class="btn btn-sm" value="Go" />
-        </form>
-        </div>
+        {% include "hyperkitty/paginator.html" with pager=threads page_jump=True %}
 
     </div>
 
