Improve paginator widget

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -304,5 +304,11 @@ div#months-list {
     form {
         display: inline-block;
         margin: 0 auto;
+        label {
+            font-weight: normal;
+        }
+    }
+    form.jump-to-page {
+        display: none;
     }
 }
