--- a/hyperkitty/templates/hyperkitty/paginator.html
+++ b/hyperkitty/templates/hyperkitty/paginator.html
@@ -17,7 +17,7 @@
     {% for pagenum in pager.page_range %}
         <li{% if pagenum == pager.number %} class="active"{% endif %}>
             {% if pagenum == "..." %}
-            <a href="#" class="disabled">...</a>
+            <a href="#" class="disabled jump-to-page">...</a>
             {% else %}
             <a href="?{% add_to_query_string page_key|default:'page' pagenum %}">{{ pagenum }}</a>
             {% endif %}
@@ -35,9 +35,28 @@
     </li>
 </ul>
 </div>
+
 {% if page_jump %}
 <div class="paginator">
-<form action="{{ request.path }}" method="get" class="form-inline">
+<form class="form-inline jump-to-page" action="" method="GET">
+<label>
+    {% trans 'Jump to page:' %}
+    <select class="form-control input-sm" name="page">
+    {% for pagenum in pager.paginator.page_range %}
+        <option value="{{ pagenum }}"
+            {% if pager.number == pagenum %}selected{% endif %}>
+            {{ pagenum }}
+        </option>
+    {% endfor %}
+    </select>
+</label>
+{% for key, value in request.GET.items %}
+    {% if key != 'page' %}
+        <input type="hidden" name="{{ key }}" value="{{ value }}" />
+    {% endif %}
+{% endfor %}
+</form>
+<form action="" method="get" class="form-inline">
     <input type="hidden" name="page" value="{{ pager.number }}" />
     {% trans 'Results per page:' %}</span>
     <select name="count" class="form-control input-sm">
@@ -50,7 +69,7 @@
             </option>
         {% endfor %}
     </select>
-    <input type="submit" class="btn btn-sm" value="Go" />
+    <input type="submit" class="btn btn-sm" value="{% trans 'Update' %}" />
 </form>
 </div>
 {% endif %}
