Repurpose the search field on the front page

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -244,6 +244,10 @@ div#months-list {
 .ui-autocomplete-loading {
     background: white url('../img/ajax-loader.gif') right center no-repeat;
 }
+.ui-widget.ui-autocomplete {
+    font-family: inherit;
+    font-size: 0.95em;
+}
 
 
 //=== Categories ===/
