--- a/hyperkitty/templates/hyperkitty/index.html
+++ b/hyperkitty/templates/hyperkitty/index.html
@@ -86,11 +86,13 @@
             {% endif %}
     </div>
     <div class="pull-right col-tn-12 col-xs-5 col-md-3">
-        {% if all_lists|length > 10 %}
-        <input name="filter" type="text" class="form-control" id="focusedInput"
-               placeholder="{% trans 'Filter list names' %}"
-               />
-        {% endif %}
+        <form method="get" action="">
+            <input type="hidden" name="url-tpl"
+                   value="{% url 'hk_list_overview' 'PLACEHOLDER@PLACEHOLDER' %}" />
+            <input name="search" type="text" class="form-control" id="focusedInput"
+                   placeholder="{% trans 'Find list' %}"
+                   />
+        </form>
     </div>
 </div> <!--/row, for switches & filter -->
 
