--- a/hyperkitty/templates/hyperkitty/index.html
+++ b/hyperkitty/templates/hyperkitty/index.html
@@ -5,7 +5,7 @@
 
 
 {% block title %}
-{% trans 'Available lists' %} - {{ app_name|title }}
+{% trans 'Available lists' %} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
