--- a/hyperkitty/templates/hyperkitty/login.html
+++ b/hyperkitty/templates/hyperkitty/login.html
@@ -7,7 +7,7 @@
 
 
 {% block title %}
-{% trans 'Login' %} - {{ app_name|title }}
+{% trans 'Login' %} - {{ block.super }}
 {% endblock %}
 
 {% block additional_stylesheets %}
