--- a/hyperkitty/templates/hyperkitty/message_new.html
+++ b/hyperkitty/templates/hyperkitty/message_new.html
@@ -6,7 +6,7 @@
 
 
 {% block title %}
-{% trans "Create a new thread" %} - {{ mlist.display_name|default:mlist.name }} - {{ app_name|title }}
+{% trans "Create a new thread" %} - {{ mlist.display_name|default:mlist.name }} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
