--- a/hyperkitty/templates/hyperkitty/register.html
+++ b/hyperkitty/templates/hyperkitty/register.html
@@ -4,7 +4,7 @@
 
 
 {% block title %}
-{% trans 'Register' %} - {{ app_name|title }}
+{% trans 'Register' %} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
