--- a/hyperkitty/templates/hyperkitty/user_profile.html
+++ b/hyperkitty/templates/hyperkitty/user_profile.html
@@ -6,7 +6,7 @@
 
 
 {% block title %}
-{% trans 'User Profile' %} - {{ app_name|title }}
+{% trans 'User Profile' %} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
