--- a/hyperkitty/templates/hyperkitty/errors/notimplemented.html
+++ b/hyperkitty/templates/hyperkitty/errors/notimplemented.html
@@ -5,7 +5,7 @@
 
 
 {% block title %}
-{% trans "Not implemented yet" %} - {{ app_name|title }}
+{% trans "Not implemented yet" %} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
