--- a/hyperkitty/templates/hyperkitty/message.html
+++ b/hyperkitty/templates/hyperkitty/message.html
@@ -5,7 +5,7 @@
 
 
 {% block title %}
-{{ message.subject }} - {{ mlist.display_name|default:mlist.name }} - {{ app_name|title }}
+{{ message.subject }} - {{ mlist.display_name|default:mlist.name }} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
