--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -7,7 +7,7 @@
 
 
 {% block title %}
-{{ mlist.display_name|default:mlist.name }} - {{ app_name|title }}
+{{ mlist.display_name|default:mlist.name }} - {{ block.super }}
 {% endblock %}
 
 
