--- a/hyperkitty/templates/hyperkitty/thread.html
+++ b/hyperkitty/templates/hyperkitty/thread.html
@@ -7,7 +7,7 @@
 
 
 {% block title %}
-{{ subject }} - {{ mlist.display_name|default:mlist.name }} - {{ app_name|title }}
+{{ subject }} - {{ mlist.display_name|default:mlist.name }} - {{ block.super }}
 {% endblock %}
 
 {% block content %}
