Rename template block for allauth compatibility

--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -6,7 +6,7 @@
 {% load staticfiles %}
 
 
-{% block title %}
+{% block head_title %}
 {{ mlist.display_name|default:mlist.name }} - {{ block.super }}
 {% endblock %}
 
