--- a/hyperkitty/templates/hyperkitty/user_profile.html
+++ b/hyperkitty/templates/hyperkitty/user_profile.html
@@ -5,7 +5,7 @@
 {% load staticfiles %}
 
 
-{% block title %}
+{% block head_title %}
 {% trans 'User Profile' %} - {{ block.super }}
 {% endblock %}
 
