--- a/hyperkitty/templates/hyperkitty/user_public_profile.html
+++ b/hyperkitty/templates/hyperkitty/user_public_profile.html
@@ -4,7 +4,7 @@
 {% load gravatar %}
 
 
-{% block title %}
+{% block head_title %}
 {% trans 'User Profile' %} {% trans "for" %} {{ fullname }} - {{ block.super }}
 {% endblock %}
 
