--- a/hyperkitty/templates/hyperkitty/errors/notimplemented.html
+++ b/hyperkitty/templates/hyperkitty/errors/notimplemented.html
@@ -4,7 +4,7 @@
 {% load hk_generic %}
 
 
-{% block title %}
+{% block head_title %}
 {% trans "Not implemented yet" %} - {{ block.super }}
 {% endblock %}
 
