--- a/hyperkitty/templates/hyperkitty/index.html
+++ b/hyperkitty/templates/hyperkitty/index.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 
 
-{% block title %}
+{% block head_title %}
 {% trans 'Available lists' %} - {{ block.super }}
 {% endblock %}
 
