--- a/hyperkitty/templates/hyperkitty/message_new.html
+++ b/hyperkitty/templates/hyperkitty/message_new.html
@@ -5,7 +5,7 @@
 {% load crispy_forms_tags %}
 
 
-{% block title %}
+{% block head_title %}
 {% trans "Create a new thread" %} - {{ mlist.display_name|default:mlist.name }} - {{ block.super }}
 {% endblock %}
 
