--- a/hyperkitty/templates/hyperkitty/reattach.html
+++ b/hyperkitty/templates/hyperkitty/reattach.html
@@ -5,7 +5,7 @@
 {% load staticfiles %}
 
 
-{% block title %}
+{% block head_title %}
 {% trans "Reattach a thread" %} - {{ mlist.display_name|default:mlist.name }} - {{ block.super }}
 {% endblock %}
 
