--- a/hyperkitty/templates/hyperkitty/register.html
+++ b/hyperkitty/templates/hyperkitty/register.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 
-{% block title %}
+{% block head_title %}
 {% trans 'Register' %} - {{ block.super }}
 {% endblock %}
 
