--- a/hyperkitty/templates/hyperkitty/thread_list.html
+++ b/hyperkitty/templates/hyperkitty/thread_list.html
@@ -4,7 +4,7 @@
 {% load hk_generic %}
 
 
-{% block title %}
+{% block head_title %}
 {{ list_title }} - {{ mlist.display_name|default:mlist.name }} - {{ block.super }}
 {% endblock %}
 
