--- a/hyperkitty/templates/hyperkitty/user_profile/favorites.html
+++ b/hyperkitty/templates/hyperkitty/user_profile/favorites.html
@@ -1,5 +1,9 @@
+{% extends "hyperkitty/user_profile/base.html" %}
 {% load i18n %}
 {% load hk_generic %}
+
+
+{% block user_profile_content %}
 
     {% if favorites %}
         <table class="table table-bordered table-condensed hidden-sm hidden-md hidden-lg">
@@ -65,3 +69,5 @@
     {% else %}
         <p>{% trans "No favorites yet." %}</p>
     {% endif %}
+
+{% endblock %}
