--- a/hyperkitty/templates/socialaccount/connections.html
+++ b/hyperkitty/templates/socialaccount/connections.html
@@ -20,6 +20,7 @@
 <div class="radio">
 <label for="id_account_{{ base_account.id }}">
 <input id="id_account_{{ base_account.id }}" type="radio" name="account" value="{{ base_account.id }}"/>
+<i class="fa fa-{{ account.get_brand.id }}"></i>
 <span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{account.get_brand.name}}</span>:
 {{ account }}
 </label>
