--- a/hyperkitty/templates/socialaccount/snippets/provider_list.html
+++ b/hyperkitty/templates/socialaccount/snippets/provider_list.html
@@ -7,15 +7,20 @@
 {% for brand in provider.get_brands %}
 <li>
   <a title="{{brand.name}}" 
-     class="socialaccount_provider {{provider.id}} {{brand.id}}" 
-     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}"
-     >{{brand.name}}</a>
+     class="socialaccount_provider {{provider.id}} {{brand.id}} btn btn-lg btn-default"
+     href="{% provider_login_url provider.id openid=brand.openid_url process=process %}">
+     <i class="fa fa-lg fa-{{brand.id}}"></i>
+     {{brand.name}}
+  </a>
 </li>
 {% endfor %}
 {% endif %}
 <li>
-  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
+  <a title="{{provider.name}}" class="socialaccount_provider {{provider.id}} btn btn-lg btn-default"
+     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+     <i class="fa fa-lg fa-{{provider.id}}"></i>
+     {{provider.name}}
+  </a>
 </li>
 {% endfor %}
 
