--- a/hyperkitty/templates/hyperkitty/thread_list.html
+++ b/hyperkitty/templates/hyperkitty/thread_list.html
@@ -71,6 +71,20 @@
 {% block additionaljs %}
 <script>
 $(document).ready(function() {
+    $('span.expander').expander({
+        slicePoint: 100,
+        /* FIXME: the \n's below don't actually work. (mizmo) */
+        userCollapseText : '\n[View Less]',
+        expandText : '\n[View More]',
+        beforeExpand: function() {
+            $(this).removeClass("collapsed");
+            $(this).addClass("expanded");
+        },
+        onCollapse: function() {
+            $(this).removeClass("expanded");
+            $(this).addClass("collapsed");
+        }
+    });
     setup_category();
     
     // onchange event for month_list select (seen only in tiny/xs viewports)
