--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-variables.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-variables.scss
@@ -9,4 +9,7 @@ $navbarColor: #f8f8f8;
 $linkHoverColor: #ddd;
 $linkColor: #08c;
 $maroon: rgb(128,0,0);
+$grey: #999;
+$super-light-grey: #eee;
+
 
