--- a/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
+++ b/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
@@ -4,36 +4,67 @@
 
         {% with starting_email=thread.starting_email %}
         <div class="thread{% if thread|is_unread_by:request.user %} unread{% endif %}">
-            <span class="thread-title">
-                <a name="{{thread.thread_id}}"
-                   href="{% url 'hk_thread' threadid=thread.thread_id mlist_fqdn=mlist.name %}"
-                    >
-                    {% if thread.favorite %}
-                    <i class="fa fa-star saved" title="{% trans 'Favorite' %}"></i>
-                    {% endif %}
-                    {% if thread|is_unread_by:request.user %}
-                    <i class="fa fa-envelope" title="{% trans 'New messages in this thread' %}"></i>
-                    {% endif %}
-                    {{ starting_email.subject|strip_subject:mlist }}
-                </a>
-            </span>
-            <span class="thread-date"
-                  title="{{ thread.date_active|date:'l, j F Y H:i:s' }}">
-                {{ thread.date_active|timesince }}
-            </span>
+
             <div class="thread-info">
-                <div class="sender gravatar">
-                    {% if starting_email.sender.address %}
-                    {% gravatar starting_email.sender.address 120 %}
-                    <br />
-                    {% endif %}
-                    {{ starting_email.sender.name|escapeemail }}
-                </div>
-                <div class="thread-content">
                     <div class="thread-email row">
-                        <span class="expander collapsed col-tn-12">
-                            {{ starting_email.content|urlizetrunc:76|escapeemaillinks }}
-                        </span>
+						<div class="col-tn-1 sender gravatar">
+							{% if starting_email.sender.address %}
+							{% gravatar starting_email.sender.address 120 %}
+							<br />
+							{% else %}
+							<div class="gravatar-placeholder">yo</div>
+							{% endif %}
+							<!-- {{ starting_email.sender.name|escapeemail }} -->
+						</div>
+						<div class="col-tn-10">
+							<span class="thread-title">
+								<a name="{{thread.thread_id}}"
+									href="{% url 'hk_thread' threadid=thread.thread_id mlist_fqdn=mlist.name %}"
+									>
+									{% if thread.favorite %}
+										<i class="fa fa-star saved" title="{% trans 'Favorite' %}"></i>
+									{% else %}
+										<i class="fa fa-star-o notsaved" title="{% trans 'Favorite' %}"></i>
+									{% endif %}
+									{% if thread|is_unread_by:request.user %}
+										<i class="fa fa-envelope" title="{% trans 'New messages in this thread' %}"></i>
+									{% endif %}
+									{{ starting_email.subject|strip_subject:mlist }}
+								</a>
+							</span>
+							<span class="thread-date"
+								title="{{ thread.date_active|date:'l, j F Y H:i:s' }}">
+								<i class="fa fa-clock-o" title="{% trans 'Most recent thread activity' %}"></i>
+								{{ thread.date_active|timesince }}
+							</span>
+						</div>
+					</div>
+					<div class="thread-email row">
+						<div class="col-tn-6 col-tn-offset-1">
+						by {{ thread.starting_email.sender.name }}
+						</div>
+					</div>
+					<div class="thread-email row">
+						<div class="col-tn-7 col-tn-offset-1">
+							<span class="expander collapsed" style="color: #999">
+								{{ starting_email.content|urlizetrunc:76|escapeemaillinks }}
+							</span>
+                        </div>
+                        <div class="col-tn-4">
+							<div class="col-tn-12 col-xs-6 col-sm-4 col-xl-3">
+								{% include "hyperkitty/fragments/like_form.html" with message_id_hash=starting_email.message_id_hash object=thread %}
+							</div>
+							<ul class="list-unstyled list-stats col-tn-12 col-sm-5 col-xl-3">
+								<li>
+									<i class="fa fa-user"></i>
+									{{ thread.participants_count }} {% trans "participants" %}
+								</li>
+                            <li>
+                                <i class="fa fa-comment"></i>
+                                {{ thread|num_comments }} {% trans "comments" %}
+                            </li>
+                        </ul>
+                        </div>
                     </div>
                     <div class="thread-extras row">
                         {% if use_mockups %}
@@ -66,7 +97,6 @@
                             </ul>
                             {% endif %}
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
